test-cases/final-dump/trait_error_multiple_impl.wybe
# Verify a trait implementation reports multiple matching methods.

module required_method {
    trait

    abstract render(x:T<:_): string
}

impl int <: required_method

def render(x:int): string = "first"
def render(x:int): string = "second"

!println(required_method.render(42))
